version/stable/_sources/api/ansys/mechanical/stubs/v252/Ansys/ACT/Mechanical/Application/SolveProcessSettings/SolveConfigurations.rst.txt
.. vale off



:class:`SolveConfigurations`
============================

.. py:class:: ansys.mechanical.stubs.v252.Ansys.ACT.Mechanical.Application.SolveProcessSettings.SolveConfigurations

   Bases: :py:obj:`object`


   
   The application's collection of solve configurations.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: SolveConfigurations

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Add`
            - Adds the given SolveConfiguration object to the collection.
          * - :py:attr:`~Clear`
            - Clears the collection of all non-defualt SolveConfiguration objects.
          * - :py:attr:`~Contains`
            - Returns true if the given SolveConfiguration belongs to the collection.
          * - :py:attr:`~CopyTo`
            - CopyTo method.
          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~GetEnumerator`
            - GetEnumerator method.
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetType`
            - GetType method.
          * - :py:attr:`~Remove`
            - Removes the given SolveConfiguration from the collection.
          * - :py:attr:`~ToString`
            - ToString method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Count`
            - The number of solve configurations in the collection.
          * - :py:attr:`~DefaultConfiguration`
            - Returns the default solve configuration.
          * - :py:attr:`~IsReadOnly`
            - IsReadOnly property.
          * - :py:attr:`~Item`
            - Item property.







Property detail
---------------
.. py:property:: Count
   :type: Optional[int]


   
   The number of solve configurations in the collection.
















   ..
       !! processed by numpydoc !!

.. py:property:: DefaultConfiguration
   :type: Optional[Ansys.ACT.Mechanical.Application.SolveProcessSettings.SolveConfiguration]


   
   Returns the default solve configuration.
















   ..
       !! processed by numpydoc !!

.. py:property:: IsReadOnly
   :type: Optional[bool]


   
   IsReadOnly property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Item
   :type: Optional[Ansys.ACT.Mechanical.Application.SolveProcessSettings.SolveConfiguration]


   
   Item property.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Add(item: Ansys.ACT.Mechanical.Application.SolveProcessSettings.SolveConfiguration) -> None

   
   Adds the given SolveConfiguration object to the collection.

   ..
       !! processed by numpydoc !!

.. py:method:: Clear() -> None

   
   Clears the collection of all non-defualt SolveConfiguration objects.

   ..
       !! processed by numpydoc !!

.. py:method:: Contains(item: Ansys.ACT.Mechanical.Application.SolveProcessSettings.SolveConfiguration) -> bool

   
   Returns true if the given SolveConfiguration belongs to the collection.

   ..
       !! processed by numpydoc !!

.. py:method:: CopyTo(array: Ansys.ACT.Mechanical.Application.SolveProcessSettings.SolveConfiguration, arrayIndex: int) -> None

   
   CopyTo method.

   ..
       !! processed by numpydoc !!

.. py:method:: Equals(obj: Any) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetEnumerator() -> Ansys.ACT.Mechanical.Application.SolveProcessSettings.SolveConfigurationEnumerator

   
   GetEnumerator method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetType() -> type

   
   GetType method.

   ..
       !! processed by numpydoc !!

.. py:method:: Remove(item: Ansys.ACT.Mechanical.Application.SolveProcessSettings.SolveConfiguration) -> bool

   
   Removes the given SolveConfiguration from the collection.

   ..
       !! processed by numpydoc !!

.. py:method:: ToString() -> str

   
   ToString method.

   ..
       !! processed by numpydoc !!



.. vale on